sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:20: error: not found: value n
      if (plusPetit(n - i + 1, n - i)) {
                    ^AlgCocktailSort2:20: error: not found: value n
      if (plusPetit(n - i + 1, n - i)) {
                               ^AlgCocktailSort2:21: error: not found: value n
        echange(n - i + 1, n - i)
                ^AlgCocktailSort2:21: error: not found: value n
        echange(n - i + 1, n - i)
                           ^